# checkflac

./: Cargo.toml  readme.md
.github/workflows/: build-cross.yml
src/: check.rs  explore.rs  main.rs  stats.rs  types.rs
