[package]
name = "checkflac"
version = "0.1.0"
edition = "2024"

[dependencies]
# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }
# Serialization/deserialization for the job file
serde = { version = "1.0", features = ["derive"] }
# JSON format for human-readable job files
serde_json = "1.0"
# Better error handling
anyhow = "1.0"
# Colored terminal output
colored = "2.1"
# Parallel directory traversal for performance
walkdir = "2.5"
# Parallel iterator support
rayon = "1.10"
# Progress bar
indicatif = "0.17"
# FLAC decoding and verification - using claxon which is well-maintained
claxon = "0.4"
# MD5 hashing - using md-5 (with hyphen) from RustCrypto
md-5 = "0.10"
# Get number of CPU cores
num_cpus = "1.16"
# Date/time formatting
chrono = "0.4"